# AmeliaMaps

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  semantic_graph.ipynb  setup.py
amelia_maps/: graph_processor.py
amelia_maps/utils/: graph_utils.py  load_sequences.py  node_types.txt  snap_to_polyline.py
src/: graph_processor.py  graph_processor_raw.py
utils/: graph_utils.py  snap_to_polyline.py
