[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amelia_maps"
version = "1.0.0"
description = "Tools for creating vectorized context graphs for intent prediction."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9, <4.0"
dependencies = [
    "affine==2.4.0",
    "contextily==1.3.0",
    "easydict==1.10",
    "geographiclib==2.0",
    "geopandas==0.14.0",
    "joblib==1.2.0",
    "matplotlib==3.7.1",
    "natsort==8.3.1",
    "networkx==3.1",
    "numpy==1.21.2",
    "opencv-python==4.7.0.72",
    "osmnx==1.7.1",
    "protobuf==4.25.4",
    "pyrootutils==1.0.4",
    "pyyaml",
    "seaborn==0.13.0",
    "tqdm==4.65.0",
    "traitlets==5.9.0",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3",
    "tabulate==0.9.0",
    "jupyter",
    "ipykernel",
]

authors = [
    {name = "Ingrid Navarro"},
    {name = "Pablo Ortega"},
    {name = "Jay Patrikar"},
    {name = "Haichuan Wang"},
    {name = "Jong Hoon Park"},
]

[tool.setuptools]
packages = ["amelia_maps", "amelia_maps.utils"]

[project.urls]
Repository = "https://github.com/AmeliaCMU/AmeliaMaps"
Homepage = "https://ameliacmu.github.io"